# iFlow-Mod-Builder

./: .gitignore  AGENTS.md  README.md  build-mod.js  index.html  package-lock.json  package.json  start-dev.bat  test-env.bat  vite.config.ts
.github/workflows/: build.yml
future/: electron-vue3-mod-tool-v1-plan.md
iflow-mod-template/: CODE-APPEND.js  CODE-EXAMPLE-DARKMODE.js  CODE-PATCH.js  CODE-PREPEND.js  CODE-REPLACE.js  code.js  mod.json
src/: App.vue  code.js  main.ts  mod.json  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  models.rs
src-tauri/src/commands/: build.rs  file.rs  mod.rs  mod_cmd.rs  settings.rs
src-tauri/src/services/: file_service.rs  mod.rs  packager.rs  settings_service.rs
src/assets/styles/: main.scss  variables.scss
src/router/: index.ts
src/stores/: build.ts  mod.ts  settings.ts
src/types/: build.d.ts  mod.d.ts  settings.ts
src/utils/: builder.ts  constants.ts  format.ts  tauri.ts  validation.ts
src/views/: BuildView.vue  EditorView.vue  HomeView.vue  SettingsView.vue
