[package]
name = "iflow-mod-gui"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = "2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
